--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
                 date: $("#eventDateInput").val(),
                 time: $("#eventTimeInput").val(),
                 minAge: $("#minAgeInput").val(),
+                description: $("#eventDescriptionInput").val();
                 price: $("#eventPriceInput").val()
             };
             var data = {
