--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
             integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
             crossorigin="anonymous"></script>
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.css">
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker3.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/locales/bootstrap-datepicker.en-GB.min.js"></script>
 </head>
 <body>
 <form>
@@ -40,7 +47,13 @@
         </div>
         <div class="form-group">
             <label for="eventDateInput">Event Date</label>
-            <input class="form-control form-control-sm" id="eventDateInput">
+            <div class="input-group date " data-date-format="yyyy-mm-dd"data-provide="datepicker">
+                <input type="text" class="form-control" id="eventDateInput">
+                <div class="input-group-addon">
+                    <span class="glyphicon glyphicon-th"></span>
+                </div>
+            </div>
+
         </div>
         <div class="form-group">
             <label for="eventTimeInput">Event Time</label>
@@ -66,8 +79,11 @@
 <script src="/socket.io/socket.io.js"></script>
 <script>
     $(function () {
+        $('.datepicker').datepicker({
+            format: 'yyyy-mm-dd'
+        });
         var socket = io();
-        $('form').submit(function(e){
+        $('form').submit(function (e) {
             e.preventDefault(); // prevents page reloading
             var eventStruct = {
                 name: $("#eventNameInput").val(),
