--- a/index.html
+++ b/index.html
@@ -21,57 +21,82 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/locales/bootstrap-datepicker.en-GB.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <style type="text/css">
+        body {
+            background: #f8f8ff;
+        }
+    </style>
 </head>
 <body>
 <form>
     <div class="container">
-        <div class="form-group">
-            <label for="eventNameInput">Event Name [Required]</label>
-            <input class="form-control form-control-sm" id="eventNameInput">
-        </div>
-        <div class="form-group">
-            <label for="venueNameInput">Venue Name</label>
-            <input class="form-control form-control-sm" id="venueNameInput">
+        <h1>721 Business Web Portal</h1>
+        <p>Please fill in this form with all the required information. Once your event has been submitted it will be
+            sent to our team for review.</p>
+    </div>
+
+    <div class="container border">
+        <div class="form-row">
+            <div class="form-group col-md-6">
+                <label for="eventNameInput">Event Name</label>
+                <input class="form-control form-control" id="eventNameInput">
+            </div>
+            <div class="form-group col-md-6">
+                <label for="venueNameInput">Venue Name</label>
+                <input class="form-control form-control" id="venueNameInput">
+            </div>
         </div>
         <div class="form-group">
             <label for="venueAddressInput">Venue Address</label>
-            <input class="form-control form-control-sm" id="venueAddressInput">
+            <input class="form-control form-control" id="venueAddressInput">
         </div>
         <div class="form-group">
-            <label for="eventImageUrlInput">Event Image Url</label>
-            <input class="form-control form-control-sm" id="eventImageUrlInput">
+            <label for="eventImageUrlInput">Event Image Url (Post a link to only the image, not a website containing the
+                image)</label>
+            <input class="form-control form-control" id="eventImageUrlInput">
         </div>
         <div class="form-group">
             <label for="eventLinkInput">Event link</label>
-            <input class="form-control form-control-sm" id="eventLinkInput">
+            <input class="form-control form-control" id="eventLinkInput">
         </div>
-        <div class="form-group">
-            <label for="eventDateInput">Event Date</label>
-            <div class="input-group date " data-date-format="yyyy-mm-dd"data-provide="datepicker">
-                <input type="text" class="form-control" id="eventDateInput">
-                <div class="input-group-addon">
-                    <span class="glyphicon glyphicon-th"></span>
-                </div>
-            </div>
+        <div class="form-row">
 
-        </div>
-        <div class="form-group">
-            <label for="eventTimeInput">Event Time</label>
-            <input class="form-control form-control-sm" id="eventTimeInput">
+            <div class="form-group col-md-6">
+                <label for="eventDateInput">Event Date [YYYY-MM-DD]</label>
+                <div class="input-group date " data-date-format="yyyy-mm-dd" data-provide="datepicker">
+                    <input type="text" class="form-control" id="eventDateInput">
+                    <div class="input-group-addon">
+                        <span class="glyphicon glyphicon-th"></span>
+                    </div>
+                </div>
+
+            </div>
+            <div class="form-group col-md-6">
+                <label for="eventTimeInput">Event Time [HH:MM]</label>
+                <input class="form-control form-control" id="eventTimeInput">
+            </div>
         </div>
         <div class="form-group">
             <label for="eventDescriptionInput">Event Description</label>
-            <input class="form-control form-control-sm" id="eventDescriptionInput">
+            <input class="form-control form-control" id="eventDescriptionInput">
         </div>
-        <div class="form-group">
-            <label for="minAgeInput">Event Minimum Age</label>
-            <input class="form-control form-control-sm" id="minAgeInput">
+        <div class="form-row">
+
+            <div class="form-group col-md-6">
+                <label for="minAgeInput">Event Minimum Age [Optional]</label>
+                <input class="form-control form-control" id="minAgeInput">
+            </div>
+            <div class="form-group col-md-6">
+                <label for="eventPriceInput">Event Price [Optional]</label>
+                <input class="form-control form-control" id="eventPriceInput">
+            </div>
         </div>
-        <div class="form-group">
-            <label for="eventPriceInput">Event Price</label>
-            <input class="form-control form-control-sm" id="eventPriceInput">
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+
+        <button type="submit" style="background-color: #FE6060" class="btn col-md-12">Submit</button>
+        <br>
+        <br>
     </div>
 </form>
 </div>
@@ -85,30 +110,43 @@
         var socket = io();
         $('form').submit(function (e) {
             e.preventDefault(); // prevents page reloading
-            var eventStruct = {
-                name: $("#eventNameInput").val(),
-                venueName: $("#venueNameInput").val(),
-                venueLat: "",
-                venueLong: "",
-                eventSourceId: "",
-                eventSourceTag: "",
-                image: $("#eventImageUrlInput").val(),
-                link: $("#eventLinkInput").val(),
-                date: $("#eventDateInput").val(),
-                time: $("#eventTimeInput").val(),
-                minAge: $("#minAgeInput").val(),
-                description: $("#eventDescriptionInput").val(),
-                price: $("#eventPriceInput").val()
-            };
-            var data = {
-                event: eventStruct,
-                address: $("#venueAddressInput").val()
-            };
+            var name = $("#eventNameInput").val();
+            var venueName = $("#venueNameInput").val();
+            var image = $("#eventImageUrlInput").val();
+            var link = $("#eventLinkInput").val();
+            var date = $("#eventDateInput").val();
+            var time = $("#eventTimeInput").val();
+            var minAge = $("#minAgeInput").val();
+            var description = $("#eventDescriptionInput").val();
+            var price = $("#eventPriceInput").val();
+            if (name === "" || venueName === "" || image === "" || link === "" || date === "" || time === "" || description === "") {
+                alert("Please input all the required information");
+            } else {
+                var eventStruct = {
+                    name: name,
+                    venueName: venueName,
+                    venueLat: "",
+                    venueLong: "",
+                    eventSourceId: "",
+                    eventSourceTag: "",
+                    image: image,
+                    link: link,
+                    date: date,
+                    time: time,
+                    minAge: minAge,
+                    description: description,
+                    price: price
+                };
+                var data = {
+                    event: eventStruct,
+                    address: $("#venueAddressInput").val()
+                };
 
 
-            socket.emit('newEventSubmitted', data);
-            alert("Are you sure you want to submit this event");
-            location.reload();
+                socket.emit('newEventSubmitted', data);
+                alert("Are you sure you want to submit this event");
+                location.reload();
+            }
         });
     });
 </script>
