Added appropriate label

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <div class="container border">
             <div class="form-row">
                 <div class="form-group col-md-6">
-                    <label for="eventNameInput">Event Name</label>
+                    <label for="eventNameInput">Hidden Gem Name</label>
                     <input class="form-control form-control" id="eventNameInputHG">
                 </div>
                 <div class="form-group col-md-6">
@@ -142,27 +142,27 @@
                 <input class="form-control form-control" id="venueAddressInputHG">
             </div>
             <div class="form-group">
-                <label for="eventImageUrlInput">Event Image Url (Post a link to only the image, not a website containing
+                <label for="eventImageUrlInput">Hidden Gem Image Url (Post a link to only the image, not a website containing
                     the
                     image)</label>
                 <input class="form-control form-control" id="eventImageUrlInputHG">
             </div>
             <div class="form-group">
-                <label for="eventLinkInput">Event link</label>
+                <label for="eventLinkInput">Hidden Gem link</label>
                 <input class="form-control form-control" id="eventLinkInputHG">
             </div>
             <div class="form-group">
-                <label for="eventDescriptionInput">Event Description</label>
+                <label for="eventDescriptionInput">Hidden Gem Description</label>
                 <input class="form-control form-control" id="eventDescriptionInputHG">
             </div>
             <div class="form-row">
 
                 <div class="form-group col-md-6">
-                    <label for="minAgeInput">Event Minimum Age [Optional]</label>
+                    <label for="minAgeInput">Hidden Gem Minimum Age [Optional]</label>
                     <input class="form-control form-control" id="minAgeInputHG">
                 </div>
                 <div class="form-group col-md-6">
-                    <label for="eventPriceInput">Event Price [Optional]</label>
+                    <label for="eventPriceInput">Hidden Gem Price [Optional]</label>
                     <input class="form-control form-control" id="eventPriceInputHG">
                 </div>
             </div>
