--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                 location.reload();
             }
         });
-        $("#eventSubmit").create(function (e) {
+        $("#eventSubmit").click(function (e) {
             e.preventDefault(); // prevents page reloading
             var name = $("#eventNameInput").val();
             var venueName = $("#venueNameInput").val();
